# neuron

./: Cargo.toml  README.md
scripts/: gpu_embed.py  mac_node_bootstrap.sh  pipeline.sh  rebuild_people.py
src/: common.rs  discover.rs  entity.rs  lib.rs  pipeline.rs
src/adapters/: apple_contacts.rs  apple_notes.rs  apple_photos.rs  browser.rs  chatgpt.rs  claude_sessions.rs  facebook.rs  facebook_friends.rs  gmail.rs  google_takeout.rs  imessage.rs  imessage_db.rs  instagram.rs  mod.rs  snapchat.rs  spotify.rs  stubs.rs
src/identity/: contacts.rs  db.rs  mod.rs  platform_friends.rs  resolver.rs
