[package]
name = "neuron"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Nick Towne"]
description = "Turn your digital life into AI-ready neurons. Every platform, full provenance."
repository = "https://github.com/jcko2895/neuron"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
dirs-next = "2"

[[bin]]
name = "neuron-test-facebook"
path = "src/bin/test_facebook.rs"

[[bin]]
name = "neuron-test-gmail"
path = "src/bin/test_gmail.rs"
